compiler/tests/fa/errors/uchar_multi.salam
// انتظار: codepoint
// زبان: فارسی
تابع اصلی:
    مقدار : یونیکد = u"AB"
    چاپ مقدار
پایان
